Remove ability to change password (backend)
